<resources>
    <string name="app_name">Hockey</string>
    <string name="accessibility_update_button">Update App</string>
    <string name="accessibility_style_view" />
    <string name="crash_dialog_title">Crash Data</string>
    <string name="crash_dialog_message">The app found information about previous crashes. Would you like to send this data to the developer?</string>
    <string name="crash_dialog_negative_button">Dismiss</string>
    <string name="crash_dialog_positive_button">Send</string>
    <string name="download_failed_dialog_title">Download Failed</string>
    <string name="download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="download_failed_dialog_negative_button">Cancel</string>
    <string name="download_failed_dialog_positive_button">Retry</string>
    <string name="update_mandatory_toast">Please install the latest version to continue to use this app.</string>
    <string name="update_dialog_title">Update Available</string>
    <string name="update_dialog_message">Show information about the new update?</string>
    <string name="update_dialog_negative_button">Dismiss</string>
    <string name="update_dialog_positive_button">Show</string>
    <string name="asset_prefix" />
    <string name="asset_prefix_chinabuild" />
    <string name="debug_screen_type">Regular phone (sw less than 360dp)</string>
    <string name="cancel_button">取消</string>
    <string name="update_button">更新</string>
    <string name="add_button">添加</string>
    <string name="ok_button">确定</string>
    <string name="share_button">分享</string>
    <string name="close_button">关闭</string>
    <string name="reply_button">回复</string>
    <string name="login_button">登录</string>
    <string name="sign_up_button">注册</string>
    <string name="edit_button">编辑</string>
    <string name="done_button">完成</string>
    <string name="send_button">发送</string>
    <string name="settings_button">设置</string>
    <string name="open_button">打开</string>
    <string name="copy_button">拷贝</string>
    <string name="back_button">返回</string>
    <string name="reload_button">重新载入</string>
    <string name="help_button">帮助</string>
    <string name="add_photo_button">"添加
照片"</string>
    <string name="flip_button">Flip</string>
    <string name="action_button">操作</string>
    <string name="play_button">播放</string>
    <string name="pause_button">暂停</string>
    <string name="flipboard_app_title">Flipboard</string>
    <string name="rate_this_app_title">如果您喜欢 Flipboard，请为我们在苹果应用商店打分。谢谢！</string>
    <string name="rate_this_app_no">暂时不要</string>
    <string name="rate_this_app_yes">现在就去打分</string>
    <string name="rate_this_app_later">稍后再提醒我</string>
    <string name="rate_this_app_simulator_title">无法在模拟器中评级</string>
    <string name="rate_this_app_simulator_msg">如果正在使用真实的iPad，现应为应用程序评级页面。</string>
    <string name="add_section_title">收藏到 Flipboard？</string>
    <string name="add_section_msg">是否将此频道收藏到您的 Flipboard 中？</string>
    <string name="add_section_msg_format">是否将%s收藏到您的 Flipboard 中？</string>
    <string name="add_section_to_toc_button_label">收藏</string>
    <string name="add_section_to_toc_added_label">已收藏</string>
    <string name="add_section_overflow_hint_title">Flipboard 小贴士</string>
    <string name="add_section_overflow_hint_msg">您可以收藏更多内容源到您的 Flipboard。轻按红丝带以查看全部。</string>
    <string name="contents_back_button">Flipboard</string>
    <string name="ad_hoc_update_title">新试用版本</string>
    <string name="ad_hoc_update_msg_format">是否更新到 Flipboard %s？</string>
    <string name="everything_section_name">所有内容</string>
    <string name="cover_stories_section_name">封面故事</string>
    <string name="friends_section_name">好友</string>
    <string name="recommended_section_name">推荐</string>
    <string name="photos_section_name">照片</string>
    <string name="everything_social_section_name">社交总汇</string>
    <string name="tell_friends_on_service_format">发布在%s上与好友分享?</string>
    <string name="section_on_flipboard_format" formatted="false">%s正在通过 Flipboard 看%s</string>
    <string name="add_a_comment_placeholder">添加评论…</string>
    <string name="share_on_service_button_format">在%s上分享</string>
    <string name="like_generic_format">在%s上说赞</string>
    <string name="login_alert_title">请先登录</string>
    <string name="login_alert_default_msg">您必须先登录。</string>
    <string name="login_alert_item_msg_format" formatted="false">您必须先登录%s才能%s此内容。</string>
    <string name="login_alert_read_later_msg_format">您必须先登录才能保存此内容，以便以后阅读。</string>
    <string name="login_alert_follow_msg_format" formatted="false">您必须先登录%s才能关注@%s</string>
    <string name="login_alert_compose_msg">登录您的社交网络帐号发布新帖子。</string>
    <string name="login_alert_reply_msg_format">请先登录%s再回复。</string>
    <string name="login_alert_share_msg">请登录您的社交网络帐号，然后分享此内容。</string>
    <string name="login_unsupported_alert_title_format">%s尚未激活</string>
    <string name="login_unsupported_alert_msg_format">%s帐号尚未激活，请尝试将 Flipboard 更新到最新版本。</string>
    <string name="social_action_reply_to">回复</string>
    <string name="social_action_share">分享</string>
    <string name="social_action_like">赞好</string>
    <string name="social_action_unlike">取消赞好</string>
    <string name="social_action_favorite">收藏</string>
    <string name="social_action_unfavorite">取消收藏</string>
    <string name="social_action_star">标星</string>
    <string name="social_action_unstar">取消标星</string>
    <string name="social_action_compose">编写</string>
    <string name="social_action_follow">关注</string>
    <string name="social_action_update">更新</string>
    <string name="social_action_comment">评论</string>
    <string name="social_action_retweet">转发</string>
    <string name="social_error_short_title_format">无法%s</string>
    <string name="social_error_title_format" formatted="false">无法%s%s</string>
    <string name="social_error_msg_format" formatted="false">抱歉，无法%s %s %s</string>
    <string name="social_error_offline_reason">由于没有网络连接。</string>
    <string name="social_error_no_provided_reason">。请稍后再试。</string>
    <string name="social_error_user">用户</string>
    <string name="social_error_item">内容</string>
    <string name="social_error_already_following_title">已在关注</string>
    <string name="social_error_already_following_msg">您已关注此用户</string>
    <string name="social_error_too_long_title">信息太长</string>
    <string name="social_error_too_long_msg_format">发布的信息必须在%d字符以内。</string>
    <string name="social_button_retweet">转发</string>
    <string name="social_button_follow">关注</string>
    <string name="social_button_close">关闭</string>
    <string name="social_likes_header">赞好</string>
    <string name="social_comments_header">评论</string>
    <string name="social_mentions_header">提及</string>
    <string name="confirm_retweet_on_twitter_title">在 Twitter 上转发</string>
    <string name="confirm_retweet_on_twitter_msg">将在 Twitter 上转发此内容。</string>
    <string name="confirm_follow_title_format">在%s上关注</string>
    <string name="confirm_follow_msg_format">使用 %2$s %3$s 帐号关注 %1$s?</string>
    <string name="from_the_future">来自未来</string>
    <string name="just_now">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="_1_minute_ago">1 分钟前</string>
    <string name="n_minutes_ago_format">%d 分钟前</string>
    <string name="_1_hour_ago">1 小时前</string>
    <string name="n_hours_ago_format">%d 小时前</string>
    <string name="date_time_format" formatted="false">%s %s</string>
    <string name="time_format">ah:mm</string>
    <string name="weekday_format">EEEE</string>
    <string name="month_and_day_format">MMMMd日</string>
    <string name="mon_and_day_format">MMMd日</string>
    <string name="_1_min">1 分钟前</string>
    <string name="n_mins_format">%d 分钟前</string>
    <string name="_1_day">1 天前</string>
    <string name="n_days_format">%d 天前</string>
    <string name="n_m_ago">%d 分钟前</string>
    <string name="n_h_ago">%d 小时前</string>
    <string name="n_d_ago">%d 天前</string>
    <string name="_1_second">1 秒</string>
    <string name="_1_minute">1 分钟</string>
    <string name="_1_hour">1 小时</string>
    <string name="n_seconds_format">%d 秒</string>
    <string name="n_minutes_format">%d 分钟</string>
    <string name="n_hours_format">%d 小时</string>
    <string name="hours_minutes_seconds_format" formatted="false">%s小时 %s分 %s秒</string>
    <string name="minutes_seconds_format" formatted="false">%s分 %s秒</string>
    <string name="toc_page_n_of_n_format">%1$d/%2$d</string>
    <string name="toc_no_internet">无网络连接</string>
    <string name="toc_sign_in_button_description">点击登录…</string>
    <string name="toc_no_items_error_msg">无内容</string>
    <string name="add_section_toc_title">更多</string>
    <string name="toc_n_more_format">再显示%d个</string>
    <string name="toc_synchronize_accessibility_label">离线下载</string>
    <string name="toc_clear_cache_accessibility_label">清除缓存</string>
    <string name="toc_settings_accessibility_label">设置</string>
    <string name="toc_refresh_accessibility_label">刷新</string>
    <string name="from">来自</string>
    <string name="sync_fetching">下载中…</string>
    <string name="sync_no_internet">无网络连接</string>
    <string name="sync_complete">下载完成</string>
    <string name="sync_failed">下载失败</string>
    <string name="content_guide_title">目录</string>
    <string name="add_more_search_title">搜寻</string>
    <string name="add_more_search_placeholder">搜寻任何内容…</string>
    <string name="content_guide_ax_title">目录</string>
    <string name="content_guide_edition_title">目录版本</string>
    <string name="content_guide_current_edition_format">%s</string>
    <string name="choose_your_content_guide_edition">选择您的目录版本</string>
    <string name="choose_your_content_guide_edition_format">%s - 选择您的目录版本</string>
    <string name="content_guide_edition_update_failed_title">无法更新</string>
    <string name="content_guide_edition_update_failed_message">现在无法更新目录版本。</string>
    <string name="confirm_sign_out_title_format">从%s登出？</string>
    <string name="confirm_sign_out_msg_format">您的%s帐号将彻底从 Flipboard 移除。</string>
    <string name="confirm_sign_out_msg_flipboard">您可随时重新登录并访问您的内容。</string>
    <string name="sign_out">登出</string>
    <string name="keep_account">保留帐号</string>
    <string name="tile_removal_sign_out_title_format">彻底移除服务?</string>
    <string name="tile_removal_sign_out_msg_format">此频道已被移除。您想在 Flipboard 中彻底移除您的%s帐号吗？</string>
    <string name="tile_removal_sign_out_button_title">是</string>
    <string name="tile_removal_keep_account_button_title">否</string>
    <string name="gr_tip_title">Google 阅读器小贴士</string>
    <string name="gr_tip_msg">点击屏幕上方的标题浏览您 Google 阅读器上的订阅源和文件夹。</string>
    <string name="account_add_err_title">无法添加帐号</string>
    <string name="account_add_err_msg">添加帐号时发生错误，请重试。</string>
    <string name="compose_settings_shorten_links">缩短链接</string>
    <string name="flipboard_account_title">Flipboard 帐号</string>
    <string name="fl_account_log_in_title">Flipboard</string>
    <string name="fl_account_edit_title">Flipboard 帐号</string>
    <string name="fl_account_user_name_label">用户名</string>
    <string name="fl_account_full_name_label">全名</string>
    <string name="fl_account_password_label">密码</string>
    <string name="fl_account_picture_label">图片</string>
    <string name="fl_account_create_button_title">创建</string>
    <string name="fl_account_sign_in_button_title">登录</string>
    <string name="fl_account_edit_manage_button_title">更多设置…</string>
    <string name="fl_account_intro_title">"您的 Flipboard
精彩无处不在"</string>
    <string name="fl_account_intro_detail_text">仅登录一次，即可在任何设备上同步个人设定，轻松浏览所有您喜爱的内容和社交网络。</string>
    <string name="flipboard_account_username_placeholder_text">点击以创建帐号或登入…</string>
    <string name="first_launch_get_started_button">立即开始</string>
    <string name="first_launch_get_started_label">创建我的 Flipboard</string>
    <string name="first_launch_sign_in_button">登录</string>
    <string name="first_launch_sign_in_label_phone">Flipboard 帐号</string>
</resources>