<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/header" android:background="@drawable/content_guide_gradient" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <flipboard.gui.FLTextView android:textSize="@dimen/header_title" android:textColor="@color/text_white" android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fl_account_log_in_title" flip:fontweight="medium" style="@style/textShadowBlack" />
        </FrameLayout>
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/inputs" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/header">
        <flipboard.gui.FLEditText android:textSize="16.0dip" android:textColorHint="@color/lightgray" android:layout_gravity="fill_horizontal" android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/fl_account_user_name_label" android:singleLine="true" android:inputType="textNoSuggestions" style="@style/FLInput" />
        <flipboard.gui.FLEditText android:textSize="16.0dip" android:textColorHint="@color/lightgray" android:layout_gravity="fill_horizontal" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/fl_account_password_label" android:singleLine="true" android:layout_below="@id/username" android:inputType="textPassword" style="@style/FLInput" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:paddingLeft="12.0dip" android:paddingTop="4.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/inputs">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <flipboard.gui.FLButton android:enabled="false" android:layout_gravity="left" android:id="@id/login_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fl_account_sign_in_button_title" android:onClick="onNativeSubmitClicked" style="@style/FLPaperButtonDone" />
            <flipboard.gui.FLButton android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_button" android:onClick="onHelpClicked" style="@style/FLPaperButtonDefault" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
