<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <flipboard.gui.actionbar.FLActionBar android:id="@id/action_bar" android:background="@color/header_grey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/action_bar_height">
        <flipboard.gui.FLTextView android:textSize="@dimen/header_title" android:textColor="@color/text_white" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fl_account_edit_title" flip:fontweight="medium" style="@style/textShadowBlack" />
    </flipboard.gui.actionbar.FLActionBar>
    <flipboard.gui.FLButton android:id="@id/update_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12.0dip" android:text="@string/done_button" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" style="@style/FLPaperButtonDarkDone" />
    <flipboard.gui.FLTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0dip" android:textColor="@color/gray_medium" android:id="@id/update_account_name_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/fl_account_full_name_label" android:layout_below="@id/action_bar" />
    <flipboard.gui.FLEditText android:textSize="16.0dip" android:layout_gravity="fill_horizontal" android:id="@id/update_account_name_edittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="12.0dip" android:singleLine="true" android:layout_below="@id/update_account_name_textview" android:inputType="textNoSuggestions" style="@style/FLInput" />
    <flipboard.gui.FLTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="16.0dip" android:textColor="@color/gray_medium" android:id="@id/update_account_picture_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/fl_account_picture_label" android:layout_below="@id/update_account_name_edittext" />
    <flipboard.gui.DownloadImageView android:id="@id/account_avatar" android:background="@drawable/avatar_shadow" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/avatar_default" android:layout_below="@id/update_account_picture_textview" android:onClick="choosePicture"
      xmlns:android="http://schemas.android.com/apk/res/android" />
    <flipboard.gui.FLButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/fl_account_edit_manage_button_title" android:layout_below="@id/account_avatar" android:layout_centerHorizontal="true" android:onClick="more" style="@style/FLPaperButtonDefault" />
</RelativeLayout>
