<?xml version="1.0" encoding="utf-8"?>
<flipboard.gui.ContentDrawerView android:layout_gravity="top" android:id="@id/background_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <flipboard.gui.actionbar.FLActionBar android:id="@id/action_bar" android:background="@drawable/content_guide_gradient" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/action_bar_height">
        <flipboard.gui.FLTextView android:textSize="@dimen/header_title" android:textColor="@color/text_white" android:layout_gravity="center" android:id="@id/firstLine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/flipboard_account_title" flip:fontweight="medium" style="@style/textShadowBlack" />
    </flipboard.gui.actionbar.FLActionBar>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/action_bar">
        <flipboard.gui.FLTextView android:textSize="24.0dip" android:textColor="@color/black" android:gravity="center" android:id="@id/account_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/fl_account_intro_title" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="0.01" android:inputType="textMultiLine|textNoSuggestions" flip:fontweight="medium" />
        <flipboard.gui.FLTextView android:textSize="20.0dip" android:textColor="@color/gray" android:gravity="center" android:id="@id/account_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="12.0dip" android:text="@string/fl_account_intro_detail_text" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="0.01" android:layout_below="@id/account_title" android:inputType="textMultiLine|textNoSuggestions" flip:fontweight="thin" />
        <LinearLayout android:paddingLeft="36.0dip" android:paddingRight="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_below="@id/account_description">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <flipboard.gui.FLButton android:id="@id/create_button" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/fl_account_create_button_title" android:onClick="createAccount" style="@style/FLPaperButtonDone" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <flipboard.gui.FLButton android:id="@id/login_button" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/fl_account_sign_in_button_title" android:onClick="login" style="@style/FLPaperButtonDefault" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</flipboard.gui.ContentDrawerView>
