<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/first_run_cinemagraph_closeup" android:scaleType="centerCrop" />
    <LinearLayout android:layout_gravity="bottom" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onGetStartedClicked">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <flipboard.gui.FLTextView android:textSize="@dimen/first_run_button_title_size" android:textColor="@color/white" android:id="@id/first_run_get_started_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_launch_get_started_button" flip:fontweight="medium" />
                <flipboard.gui.FLTextView android:textSize="@dimen/first_run_button_subtitle_size" android:textColor="@color/first_run_subtitle" android:id="@id/first_run_get_started_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_launch_get_started_label" android:layout_below="@id/first_run_get_started_title" flip:fontweight="medium" />
            </RelativeLayout>
        </LinearLayout>
        <View android:background="@color/separator_transparent" android:layout_width="1.0dip" android:layout_height="@dimen/first_run_divider_height" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:onClick="onSignInClicked">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <flipboard.gui.FLTextView android:textSize="@dimen/first_run_button_title_size" android:textColor="@color/white" android:id="@id/first_run_sign_in_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_launch_sign_in_button" flip:fontweight="medium" />
                <flipboard.gui.FLTextView android:textSize="@dimen/first_run_button_subtitle_size" android:textColor="@color/first_run_subtitle" android:id="@id/first_run_sign_in_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_launch_sign_in_label_phone" android:layout_below="@id/first_run_sign_in_title" flip:fontweight="medium" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
