<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootView" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <flipboard.gui.actionbar.FLActionBar android:id="@id/action_bar" android:background="@drawable/content_guide_gradient" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/action_bar_height">
            <flipboard.gui.FLTextView android:textSize="@dimen/header_title" android:textColor="@color/text_white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fl_account_log_in_title" flip:fontweight="medium" style="@style/textShadowBlack" />
        </flipboard.gui.actionbar.FLActionBar>
        <flipboard.gui.FLButton android:layout_gravity="right|center" android:id="@id/login_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:text="@string/fl_account_sign_in_button_title" style="@style/FLPaperButtonDarkDone" />
    </FrameLayout>
    <flipboard.gui.FLEditText android:textSize="@dimen/sign_in_field" android:textColorHint="@color/lightgray" android:layout_gravity="fill_horizontal" android:id="@id/login_username" android:paddingTop="@dimen/sign_in_field_padding" android:paddingBottom="@dimen/sign_in_field_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/item_space" android:layout_marginTop="@dimen/sign_in_field" android:layout_marginRight="@dimen/item_space" android:hint="@string/fl_account_user_name_label" android:singleLine="true" android:layout_below="@id/header" android:inputType="textNoSuggestions" style="@style/FLInput" />
    <flipboard.gui.FLEditText android:textSize="@dimen/sign_in_field" android:textColorHint="@color/lightgray" android:layout_gravity="fill_horizontal" android:id="@id/login_password" android:paddingTop="@dimen/sign_in_field_padding" android:paddingBottom="@dimen/sign_in_field_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/item_space" android:layout_marginTop="@dimen/sign_in_field" android:layout_marginRight="@dimen/item_space" android:hint="@string/fl_account_password_label" android:singleLine="true" android:layout_below="@id/login_username" android:inputType="textPassword" style="@style/FLInput" />
    <flipboard.gui.FLTextView android:textSize="@dimen/sign_in_help" android:gravity="center" android:id="@id/login_help_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="@dimen/sign_in_field" android:layout_marginRight="20.0dip" android:layout_below="@id/login_password" android:inputType="textMultiLine|textNoSuggestions" />
</RelativeLayout>
