<?xml version="1.0" encoding="utf-8"?>
<flipboard.gui.TOCPage android:orientation="vertical" android:id="@id/tocpage_container" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0" flip:textSize="@dimen/toc_tile_title_size" flip:tileMessageSize="@dimen/toc_tile_message_size" flip:textColor="#ffffffff" flip:shadowColor="#ff000000" flip:shadowDx="0.0" flip:shadowDy="1.2" flip:title_fontweight="medium" flip:message_fontweight="normal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:flip="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/toc_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:onClick="openContentDrawerOnAccount">
        <FrameLayout android:id="@id/fl_avatar_ctr" android:layout_width="@dimen/toc_header_avatar_size" android:layout_height="@dimen/toc_header_avatar_size" android:layout_marginLeft="@dimen/item_space" android:layout_marginTop="@dimen/item_space" android:layout_marginRight="8.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
            <flipboard.gui.DownloadImageView android:id="@id/fl_avatar" android:layout_width="fill_parent" android:layout_height="fill_parent" flip:placeholder="@drawable/flipboard_profile_placeholder_icon" />
            <View android:background="@drawable/tile_border" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </FrameLayout>
        <flipboard.gui.FLLabelTextView android:textSize="@dimen/toc_header_top_text_size" android:textColor="@color/text_black" android:id="@id/firstLine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/toc_user_margin_top" android:layout_marginRight="50.0dip" android:text="@string/fl_account_edit_title" android:layout_toRightOf="@id/fl_avatar_ctr" flip:fontweight="medium" />
        <flipboard.gui.FLLabelTextView android:textSize="@dimen/toc_header_bottom_text_size" android:textColor="@color/text_lightgray" android:ellipsize="marquee" android:id="@id/secondLine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="50.0dip" android:text="@string/flipboard_account_username_placeholder_text" android:layout_below="@id/firstLine" android:layout_alignLeft="@id/firstLine" />
        <ImageView android:layout_gravity="right" android:id="@id/handle" android:paddingLeft="30.0dip" android:paddingRight="@dimen/ribbon_margin_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ribbon" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="openContentDrawer" />
    </RelativeLayout>
    <view android:id="@id/toc_tiles" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/action_bar" android:layout_below="@id/toc_header" android:layout_alignParentLeft="true" class="flipboard.gui.TOCPage$TilesContainer" />
    <flipboard.gui.actionbar.FLActionBar android:id="@id/action_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
        <flipboard.gui.FLLabelTextView android:textSize="@dimen/section_item_text_normal" android:textColor="@color/text_lightgray" android:layout_gravity="left" android:id="@id/no_internet" android:paddingLeft="@dimen/item_space" android:paddingTop="@dimen/toc_inter_padding" android:paddingRight="12.0dip" android:paddingBottom="@dimen/toc_inter_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/toc_no_internet" />
        <flipboard.gui.FLImageButton android:layout_gravity="left" android:id="@id/refresh_button" android:paddingLeft="@dimen/item_space" android:paddingTop="@dimen/toc_inter_padding" android:paddingRight="@dimen/item_space" android:paddingBottom="@dimen/toc_inter_padding" android:src="@drawable/toc_refresh" android:onClick="refreshClicked" style="@style/ImageButtonNoBackground" />
        <flipboard.gui.FLLabelTextView android:textSize="@dimen/toc_paginator_size" android:textColor="@color/text_paginator" android:layout_gravity="center" android:id="@id/toc_paginator" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </flipboard.gui.actionbar.FLActionBar>
</flipboard.gui.TOCPage>
